--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,13 @@ body{
   background-color: black;
 
 }
+
+.Logo {
+  font-size: 32px;
+  padding-right: 20px;
+  padding-left: 20px;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  font-family: "Dancing Script", cursive;
+}
